# Cleainput-Ai

./: Appbuilder.html  CMakeLists.txt  README.md  index.html  main.cpp
src/ai/: tokenizer.cpp  tokenizer.hpp  transformer.cpp  transformer.hpp
src/audio/: microphone.cpp  microphone.hpp  speaker.cpp  tts_engine.cpp  vad.cpp  whisper_engine.cpp  whisper_engine.hpp
src/codegen/: code_generator.hpp  file_builder.hpp  react_native.hpp  template_engine.hpp
src/codegen/crypto/: aes256.hpp  e2e.hpp  keypair.hpp
src/core/: arena.hpp  thread_pool.hpp
src/crawler/: fetcher.cpp  parser.cpp
src/net/: http.cpp  websocket.hpp
src/optimize/: compression.hpp  cost_tracker.hpp  rate_limiter.hpp  request_router.hpp  smart_cache.hpp
src/storage/: cloudflare.hpp  firebase.hpp  supabase.hpp
